--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,9 +2,10 @@ backend:
   name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
   # This line should *not* be indented
-media_folder: "static/image" # Media files will be stored in the repo under images/uploads
+media_folder: "/assets/image" # Media files will be stored in the repo under images/uploads
 public_folder: "/image" 
-
+display_url: https://darinjmb.com
+logo_url: "/image/iconsforwebsite/32x32.png"
 collections:
   - name: "video" # Used in routes, e.g., /admin/collections/blog
     label: "Video" # Used in the UI
